--- a/build.gradle
+++ b/build.gradle
@@ -42,20 +42,17 @@ dependencies {
     // annotations
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 
     // api
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}"
 
-    // Po wygenerowaniu klienta, trzeba będzie dodać poniższe zależności, żeby kod się kompilował
+//    // Po wygenerowaniu klienta, trzeba będzie dodać poniższe zależności, żeby kod się kompilował
     implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
     implementation "javax.annotation:javax.annotation-api:${javaxAnnotationApiVersion}"
     implementation "io.swagger:swagger-annotations:${swaggerAnnotationsVersion}"
-
-    // warning: unknown enum constant When.MAYBE
-    // reason: class file for javax.annotation.meta.When not found
+//
+//    // warning: unknown enum constant When.MAYBE
+//    // reason: class file for javax.annotation.meta.When not found
     implementation "com.google.code.findbugs:jsr305:${jsr305Version}"
 
     // test
@@ -63,52 +60,23 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:mysql'
     testImplementation 'org.mockito:mockito-core:3.11.0'
     testImplementation 'com.h2database:h2:2.2.220'
 
 
     // Integration tests
     // Ta zależność musi być przed wiremock standalone
-    testImplementation "org.slf4j:slf4j-api:${wiremockSlf4jVersion}"
-    testImplementation "com.github.tomakehurst:wiremock-standalone:${wiremockVersion}"
-    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
+//    testImplementation "org.slf4j:slf4j-api:${wiremockSlf4jVersion}"
+//    testImplementation "com.github.tomakehurst:wiremock-standalone:${wiremockVersion}"
+//    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 
 
 }
-dependencyManagement {
-    imports {
-        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
-    }
-}
-// https://github.com/OpenAPITools/openapi-generator/tree/master/modules
-// https://openapi-generator.tech/docs/generators/java/
-// https://openapi-generator.tech/docs/plugins
-// http://www.cepik.gov.pl/interfejs-dla-cepik
-/*
-openApiGenerate {
-    generatorName = "java"
-    library = "webclient"
-    configOptions = [
-            serializableModel   : "true",
-            dateLibrary         : "java8",
-            serializationLibrary: "jackson"
-    ]
-    outputDir = "$buildDir/generated-sources/openapi".toString()
-    inputSpec = "$rootDir/src/main/resources/contracts/jakiesapi".toString()
-    apiPackage = "pl.zajavka.infrastructure.jakies.api"
-    modelPackage = "pl.zajavka.infrastructure.jakis.model"
-}
-
-sourceSets {
-    main {
-        java.srcDirs += "$buildDir/generated-sources/openapi/src/main/java"
-    }
-}
-compileJava.dependsOn tasks.openApiGenerate
-
-*/
+//dependencyManagement {
+//    imports {
+//        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+//    }
+//}
 
 test {
     useJUnitPlatform()
