Implementacja testu restAsure

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,9 +2,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-  security:
-    enabled: false
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:myDb
 
+api:
+  quiz:
+    url: http://localhost:9999
