--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,9 @@ dependencies {
 
     // Integration tests
     // Ta zależność musi być przed wiremock standalone
-//    testImplementation "org.slf4j:slf4j-api:${wiremockSlf4jVersion}"
-//    testImplementation "com.github.tomakehurst:wiremock-standalone:${wiremockVersion}"
-//    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
+    testImplementation "org.slf4j:slf4j-api:${wiremockSlf4jVersion}"
+    testImplementation "com.github.tomakehurst:wiremock-standalone:${wiremockVersion}"
+    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
 
 
 }
