--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,17 @@ plugins {
     id "org.openapi.generator" version "${openapiGeneratorVersion}"
 }
 
+jar {
+    duplicatesStrategy = 'exclude'
+    manifest {
+        attributes "Main-Class": "pl.zbadajsie.przychodnia.PrzychodniaApplication"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 group = 'pl.zbadajsie'
 version = '1.0'
 
